Multires modifier produces rounded corners with 'Simple' subdivision mode #75697

Closed
opened 2020-04-13 22:15:43 +02:00 by slowburn · 13 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon (TM) RX 470 Graphics ATI Technologies Inc. 4.5.13587 Core Profile Context 20.3.1 26.20.15029.15007

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-11 15:16, hash: 85de07e64c
Worked: 2.82

Short description of error
If a mesh has open edges (eg. default plane), corners between those edges will get rounded after the first subdivision level.
multires_2.83.jpg
This seems like a the same issue as #74869 that still persists for open edges.

Exact steps for others to reproduce the error
Create a plane
Add Multires modifier
Switch to simple
Subdivide 2+ times

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon (TM) RX 470 Graphics ATI Technologies Inc. 4.5.13587 Core Profile Context 20.3.1 26.20.15029.15007 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-11 15:16, hash: `85de07e64c` Worked: 2.82 **Short description of error** If a mesh has open edges (eg. default plane), corners between those edges will get rounded after the first subdivision level. ![multires_2.83.jpg](https://archive.blender.org/developer/F8469728/multires_2.83.jpg) This seems like a the same issue as #74869 that still persists for open edges. **Exact steps for others to reproduce the error** Create a plane Add Multires modifier Switch to simple Subdivide 2+ times
Author

Added subscriber: @slowburn

Added subscriber: @slowburn

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons

Yes I can confirm.
It seems like the multires has some shrinkage problems, as seen here too: #75631

Yes I can confirm. It seems like the multires has some shrinkage problems, as seen here too: #75631
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

@ThinkingPolygons but it's reported to be working fine in 2.82

@ThinkingPolygons but it's reported to be working fine in 2.82
Member

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

In #75697#909948, @ankitm wrote:
@ThinkingPolygons but it's reported to be working fine in 2.82

Of course.
What you mean?
You need to set it as confirmed bug.

> In #75697#909948, @ankitm wrote: > @ThinkingPolygons but it's reported to be working fine in 2.82 Of course. What you mean? You need to set it as confirmed bug.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

It seems like the multires has some shrinkage problems, as seen here too: #75631

I thought you wanted to close it as duplicate. Which seems wrong as in #75631, 2.7x is the reported working version.

You need to set it as confirmed bug.

if you (and OP, being familiar with the discussion in #74869 ) say so. I don't know much here.

> It seems like the multires has some shrinkage problems, as seen here too: #75631 I thought you wanted to close it as duplicate. Which seems wrong as in #75631, 2.7x is the reported working version. > You need to set it as confirmed bug. if you (and OP, being familiar with the discussion in #74869 ) say so. I don't know much here.

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29

@Sergey you are probably the guy to poke here? :)

@Sergey you are probably the guy to poke here? :)

This issue was referenced by 9aeb475e99

This issue was referenced by 9aeb475e99b0b469bb6ce657da6480f971112a45

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2020-04-22 14:28:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75697
No description provided.